[gd_scene load_steps=2 format=3 uid="uid://t47q7d2w0116"]

[ext_resource type="Script" path="res://Scripts/control.gd" id="1_q466l"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_q466l")

[node name="OpenFileButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Open File"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.txt ")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 54.0
offset_right = 58.0
offset_bottom = 77.0

[node name="DayButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 335.0
offset_top = 103.0
offset_right = 375.0
offset_bottom = 143.0

[connection signal="pressed" from="OpenFileButton" to="." method="_on_open_file_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
